# pydanticai

./: .gitignore  README.md  setup.sh
airflow/dags/: db_backup_and_restore.py
airflow/plugins/: WorkdayHolidayTimetable.py  plugins.py
airflow/tests/: conftest.py  test_dag_validation.py
application/: alembic.ini  entrypoint.sh  main.py  requirements.txt
application/alembic/: env.py
application/config/: database.py  email.py  environment.py  middleware.py  swagger.py
application/modules/: exceptions.py  repository.py
application/new/: main.py
application/public/: logob64.txt
application/scripts/: proxima-sequencia-saida-fix.sh
ativos/: model.py  repository.py  schema.py
container/: dockerfile.dev  dockerfile.lib  dockerfile.prod
dependencias-externas/application/: entrypoint.sh  healthcheck.py  logger.py  main.py  requirements.txt
dependencias-externas/container/: dockerfile.dev  dockerfile.lib  dockerfile.prod
docling_pdf/: Dockerfile  docker-compose.yml  env.example  pyproject.toml  requirements.txt
docling_pdf/src/docling_pdf/: __init__.py  config.py  main.py
docling_pdf/src/docling_pdf/exceptions/: custom_exceptions.py
docling_pdf/src/docling_pdf/models/: pdf_models.py  response_models.py
docling_pdf/src/docling_pdf/routers/: pdf_router.py
docling_pdf/src/docling_pdf/services/: file_service.py  pdf_service.py
docling_pdf/src/docling_pdf/utils/: logger.py  ssl_config.py  validators.py
docling_pdf/tests/: test_endpoints.py  test_pdf_service.py
fidcs/: __init__.py  entity.py  repository.py  router.py  schema.py  service.py
fontes_dados/: model.py  repository.py
indices/: model.py  repository.py  router.py  schema.py  service.py
integrations/: connectors.py  connectors_factories.py  enums.py
leitor_documentos/: __init__.py  base.py  schema.py  validators.py
pydanticai/: __init__.py  entity.py  enum.py  enum_modules.py  load_model_schemas.py  model.py  repository.py  router.py  schema.py  service.py  setup_pydanticai_tables.sh
streamlit-icatu/: app.py  environment.py
(+589 files in other folders)
